<resources>
    <string name="app_name">Eating King</string>
    <string-array name="food_random">
        <item>@string/arr1</item>
        <item>@string/arr2</item>
        <item>@string/arr3</item>
        <item>@string/arr4</item>
        <item>@string/arr5</item>
        <item>@string/arr6</item>
    </string-array>

    <string-array name="food">
        <item>@string/arr1</item>
        <item>@string/arr2</item>
        <item>@string/arr3</item>
        <item>@string/arr4</item>
        <item>@string/arr5</item>
    </string-array>

    <string-array name="actions">
        <item>@string/action1</item>
        <item>@string/action2</item>
    </string-array>


    <string name="welcomeToApp">welcome to Eating King</string>
    <string name="title_name">name</string>
    <string name="title_date">date</string>
    <string name="title_kind">kind</string>
    <string name="title_cost">cost</string>
    <string name="plzTypeName">Please type name of the item</string>
    <string name="plzTypeCost">cost of the item</string>
    <string name="save">save</string>
    <string name="instruction">type name, date, and kind to search keyword, certain date and kind</string>

    <string name="arr1">Breakfast</string>
    <string name="arr2">Lunch</string>
    <string name="arr3">Dinner</string>
    <string name="arr4">Dessert</string>
    <string name="arr5">Midnight Snack</string>
    <string name="arr6">All kinds</string>


    <string name="notify">It is time to keep your expenses on record!</string>
    <string name="showAll">show all</string>
    <string name="noEmpty">Empty Invalid</string>
    <string name="comment">comment</string>
    <string name="budgetOfThisMonth">Budget</string>
    <string name="dollar">dollar(s)</string>
    <string name="currentlyLeft">Currently Left</string>
    <string name="tab_expense">Expense</string>
    <string name="tab_search">Search</string>
    <string name="tab_count">Count</string>
    <string name="tab_eatWhat">Eat?</string>
    <string name="dailyNotification">Notification:</string>
    <string name="comment_1">You still have plenty!</string>
    <string name="comment_2">Eat something good!</string>
    <string name="comment_3">Better keep an eye on how much you spend!</string>
    <string name="comment_4">Keep up your good work!</string>
    <string name="comment_5">You are about to eat dust!!</string>
    <string name="comment_6">Warning!!</string>
    <string name="comment_7">You are spending too much!!</string>
    <string name="comment_8">Is dust delicious?</string>
    <string name="comment_9">All you see is dust!</string>
    <string name="save_ok">Saved Successfully.</string>
    <string name="ok">ok</string>
    <string name="action1">Change</string>
    <string name="action2">Delete</string>
    <string name="cancel">cancel</string>
    <string name="plzTypeKeyword">Please type keyword of item name</string>
    <string name="notSet">not set</string>
    <string name="alreadySpent">Spent</string>
</resources>
